--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ section {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: #012970;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -182,10 +182,12 @@ section {
   font-weight: 700;
   letter-spacing: 1px;
   color: #012970;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Fredoka One', cursive;
   margin-top: 3px;
 }
-
+.header .font2 {
+  color: #fbff08;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -232,7 +234,7 @@ section {
 }
 
 .navbar .getstarted {
-  background: #4154f1;
+  background: #012970;
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 4px;
@@ -439,7 +441,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: #012970;
   box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 
@@ -534,7 +536,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: #012970;
   box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
 }
 
@@ -587,6 +589,9 @@ section {
   transform: scale(1);
 }
 
+.values .btn-primary {
+  background-color: #012970;
+}
 /*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
